frontend | fixed scrollbar height

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -28,6 +28,7 @@ body {
 
 body::-webkit-scrollbar {
   width: 12px;
+  height: 12px;
 }
 
 body::-webkit-scrollbar-track {
